# ArthaSamriddhiAI

./: .env.example  .gitignore  DEMO_GUIDE.md  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: launch.json  settings.local.json
.github/workflows/: deploy-prod.yml
alembic/: env.py
alembic/versions/: 370839f7aeeb_cluster_0_sessions_t1_events.py  ae7473a43ba2_cluster_1_chunk_1_1_investors_households.py  b2bb3d2def6a_cluster_1_chunk_1_3_llm_provider_config.py  ef58022a56fc_cluster_1_chunk_1_2_c0_conversations.py
dev/: seed_investors.py  test_users.yaml
docs/: BLOOMBERG_GUIDE.md  DATA_SOURCES.md  DEMO_VIDEO_5MIN.md  DEMO_VIDEO_SCRIPT.md  QUICKSTART.md  portfolio_template.csv  prod-access.md
docs/bloomberg_templates/: analyst_consensus.csv  cds_spreads.csv  corporate_bonds.csv  esg_scores.csv  fd_rates.csv  mf_risk_metrics.csv  ownership_data.csv  stock_fundamentals.csv  yield_curve.csv
docs/doc1_v2/: demo_stage_database_addendum.md  foundation_reference_structure.md  principles_of_operation.md
rules/: exposure_limits.yaml  investor_constraints.yaml  ltcg-rates-v1.0.yaml  mandate_rules.yaml  regulatory.yaml  risk_constraints.yaml
scripts/: prod-ssh.ps1  refresh_cache.py  run_pipeline.py  seed_demo.py  seed_investors.py  seed_portfolios.py  setup_cron.sh
src/artha/: __init__.py  app.py  config.py
static/: index.html  landing.html
static/css/: app.css
static/help/: content.js
static/js/: api.js  router.js  (+2 more)
tests/: canonical_fixtures.py  conftest.py
web/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+416 files in other folders)
